--- a/css/main.css
+++ b/css/main.css
@@ -222,3 +222,16 @@ form.signin p, form.signin span {
 	width: 120px;
 	height: 50px;
 	}
+	
+
+
+
+
+#page-wrap { position: relative;  }
+
+#learninz {
+	position: absolute;
+	top: 0; right: 0; width: 320px;
+}
+
+figure img { width: 115px; display: block; }
