--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,10 @@
 body{
-	background: rgb(191,194,146);
+	background: #bfc292;
 	border-radius:10px;
 	}
 a, a:visited{
 	font-size: 13px;
-	font-family: Trajan Pro, Segoe UI;
+	font-family: Trajan Pro, Trebuchet MS, Segoe UI;
 	text-decoration: none;
 	color: #17526d;
 	font-weight: bold;	
@@ -31,7 +31,7 @@ a:hover{
 	}	
 .menu a{
 	font-size: 16px;
-	font-family: Trajan Pro, Segoe UI;
+	font-family: Trajan Pro, Trebuchet MS, Segoe UI;
 	text-decoration: none;
 	color: #974B07;
 	margin-right: 10px;
@@ -62,18 +62,29 @@ a:hover{
 	box-shadow: 0 8px 8px -6px black;
 	}
 #content{
-	width:1000px;
+	width:1050px;
 	height: 350px;
 	text-align: left;
 	font-family: Segoe UI, Tahoma;
 	font-size: 16px;
 	border: 1px solid #974B07;
 	border-radius: 5px;
-	background: rgb(169,175,137);
+	background: #a9af89;
 	-webkit-box-shadow: inset 0 0 6px 0 black;
 	-moz-box-shadow: inset 0 0 6px 0 black;
 	box-shadow: inset 0 0 6px 0 black;
 	padding:30px;
+	}	
+#stage{
+	color: #004000;
+	text-align: center;
+	border: 1px solid black;
+	margin-bottom: 20px;
+	border-radius: 5px;
+	background: #bfc292;
+	-webkit-box-shadow: 0 6px 6px -6px black;
+	-moz-box-shadow: 0 6px 6px -6px black;
+	box-shadow: 0 6px 6px -6px black;
 	}	
 #content a{
 	font-size: 15px;
@@ -122,7 +133,7 @@ a:hover{
 	z-index: 999;
 }
 .login-popup{
-	display:none;
+	display: none;
 	background: rgb(169,175,137);
 	padding: 10px; 	
 	border: 2px solid black;
@@ -160,7 +171,7 @@ form.signin .textbox span {
 }
 form.signin p, form.signin span { 
 	font-size: 14px;
-	font-family: Trajan Pro;
+	font-family: Trajan Pro, Trebuchet MS;
 	text-decoration: none;
 	font-weight: bold;
 	color: #17526d; 
@@ -218,16 +229,95 @@ form.signin p, form.signin span {
 	border:none;
 	font-size: 12px;
 	}
+
 .team_select button{
 	width: 120px;
 	height: 50px;
+	color: #004000;
+	font-weight: bold;
+	border-radius: 5px;
+	background: #bfc292;
+	-webkit-box-shadow: 0 2px 2px 0px #6e894d;
+	-moz-box-shadow: 0 2px 2px 0px #6e894d;
+	box-shadow: 0 2px 2px 0px #6e894d;
+	border: 1px solid #004000;
 	}
 	
+.team_select button:hover{
+	color: #288c28;
+	border: white;
+	background: #c0c2a1;
+	-webkit-box-shadow: 0 2px 2px 0px #288c28;
+	-moz-box-shadow: 0 2px 2px 0px #288c28;
+	box-shadow: 0 2px 2px 0px #288c28;
+	cursor: pointer;
+	}
+	
+#page-wrap img{
+	border: 1px solid black;
+	border-radius: 4px;
+	}	
+#confirmation, #finalElevenConfirmation, #finalTrainingConfirmation {
+	width: 70px;
+	height: 18px;
+	font-size: 10px;
+	color: #004000;
+	font-weight: bold;
+	border-radius: 5px;
+	background: #bfc292;
+	-webkit-box-shadow: 0 2px 2px 0px #7aaf3b;
+	-moz-box-shadow: 0 2px 2px 0px #7aaf3b;
+	box-shadow: 0 2px 2px 0px #7aaf3b;
+	border: 1px solid #004000;
+	cursor: pointer;
+	opacity: 0.5;
+	}	
+#finalElevenConfirmation, #finalTrainingConfirmation{
+	opacity: 1;
+	}	
+#message button:hover, #confirmation:hover, #finalElevenConfirmation:hover, #finalTrainingConfirmation:hover{
+	color: #974B07;
+	border: 1px solid #974B07;
+	}	
+	
+
+.box2_player{
+	color: #004000;
+	align: center;
+	background: #bfc292;
+	border-radius: 5px;
+	padding: 0 5px 0 5px;
+}
+
+#message button{
+	width: 15px;
+	height: 15px;
+	font-size: 10px;
+	color: #004000;
+	padding: 0;
+	margin: 0;
+	font-weight: bold;
+	border-radius: 4px;
+	background: #bfc292;
+	-webkit-box-shadow: 0 2px 2px 0px #7aaf3b;
+	-moz-box-shadow: 0 2px 2px 0px #7aaf3b;
+	box-shadow: 0 2px 2px 0px #7aaf3b;
+	border: 1px solid #004000;
+	cursor: pointer;
+}
+
+#finalSquad a, #finalSquad a:visited{
+	color: #974B07;
+	}
+
+#finalElevenMessage{
+	color: #974B07;
+	font-size: 12px;
+	font-weight: bold;
+	}
 
 
-
-
-#page-wrap { position: relative;  }
+#page-wrap { position: relative; }
 
 #learninz {
 	position: absolute;
